RP2 feat:完成交互流和网络分配功能
