# cmd/resource/wire_gen.go
@@ -28,26 +28,29 @@ func wireApp(confServer *conf.Server, confData *conf.Data, logger log.Logger) (*
 	if err != nil {
 		return nil, nil, err
 	}
-	greeterRepo := data.NewGreeterRepo(dataData, logger)
-	greeterUsecase := biz.NewGreeterUsecase(greeterRepo, logger)
-	greeterService := service.NewGreeterService(greeterUsecase)
+	instanceRepo := data.NewResourceRepo(dataData, logger)
+	auditRepo := data.NewAuditRepo(dataData, logger)
+	k8sClient, err := data.NewK8sClient(confData, logger)
+	if err != nil {
+		cleanup()
+		return nil, nil, err
+	}
+	k8sRepo, err := data.NewK8sRepo(confData, k8sClient, logger)
+	if err != nil {
+		cleanup()
+		return nil, nil, err
+	}
+	networkRepo := data.NewNetworkRepo(dataData, logger)
+	execRepo := data.NewExecRepo(k8sClient, logger)
+	resourceUsecase := biz.NewResourceUsecase(instanceRepo, auditRepo, k8sRepo, networkRepo, execRepo, logger)
+	resourceService := service.NewResourceService(resourceUsecase)
+	httpServer := server.NewHTTPServer(confServer, resourceService, logger)
+	grpcServer := server.NewGRPCServer(confServer, resourceService, logger)
 	connection, cleanup2, err := data.NewRabbitMQ(confData, logger)
 	if err != nil {
 		cleanup()
 		return nil, nil, err
 	}
-	instanceRepo := data.NewResourceRepo(dataData, logger)
-	auditRepo := data.NewAuditRepo(dataData, logger)
-	k8sRepo, err := data.NewK8sRepo(confData, logger)
-	if err != nil {
-		cleanup2()
-		cleanup()
-		return nil, nil, err
-	}
-	resourceUsecase := biz.NewResourceUsecase(instanceRepo, auditRepo, k8sRepo, logger)
-	resourceService := service.NewResourceService(resourceUsecase)
-	httpServer := server.NewHTTPServer(confServer, greeterService, resourceService, logger)
-	grpcServer := server.NewGRPCServer(confServer, greeterService, resourceService, logger)
 	mqServer := server.NewMQServer(confData, connection, resourceService, logger)
 	app := newApp(logger, httpServer, grpcServer, mqServer)
 	return app, func() {
