# internal/server/grpc.go
@@ -1,7 +1,6 @@
 package server
 
 import (
-	hellov1 "resource/api/helloworld/v1"
 	resourcev1 "resource/api/resource/v1"
 	"resource/internal/conf"
 	"resource/internal/service"
@@ -12,7 +11,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, resource *service.ResourceService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, resource *service.ResourceService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -28,7 +27,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, resource *se
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	hellov1.RegisterGreeterServer(srv, greeter)
 	resourcev1.RegisterResourceServiceServer(srv, resource)
 	return srv
 }
